# galay-rpc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  galay-rpc-config.cmake.in
.claude/skills/C++开发规范/: SKILL.md
.claude/skills/galay系列库使用规范/: SKILL.md
benchmark/: B1-RpcBenchServer.cpp  B2-RpcBenchClient.cpp  B2-rpc_bench_client.cpp  B3-ServiceDiscoveryBench.cpp  B3-service_discovery_bench.cpp  B4-RpcStreamBenchServer.cpp  B4-rpc_stream_bench_server.cpp  B5-RpcStreamBenchClient.cpp  CMakeLists.txt  b1_rpc.cpp  b2_rpc.cpp  b3_discovery.cpp  b4_stream.cpp  b5_stream.cpp
benchmark/compare/rust/tonic/: README.md
build-docverify/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  galay-rpc-config.cmake
build-docverify/Testing/Temporary/: CTestCostData.txt
build-docverify/benchmark/: B1-RpcBenchServer  B2-RpcBenchClient  B3-ServiceDiscoveryBench  B4-RpcStreamBenchServer  B5-RpcStreamBenchClient  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-docverify/examples/: CTestTestfile.cmake  E1-EchoServer  E2-EchoClient  E3-StreamServer  E4-StreamClient  Makefile  cmake_install.cmake
build-docverify/test/: CTestTestfile.cmake  Makefile  T1-RpcProtocolTest  T2-RpcServerTest  T3-RpcClientTest  cmake_install.cmake
cmake/: option.cmake
docs/: 00-快速开始.md  01-架构设计.md  02-API参考.md  03-使用指南.md  04-性能测试.md  04-示例代码.md  05-性能测试.md  05-示例代码.md  06-高级主题.md  07-常见问题.md  1-架构设计.md  2-API参考.md  3-使用指南.md  B1-RPC压测报告.md  B3-服务发现压测报告.md  B4-真实流压测报告.md  release_note.md
docs/plans/: 2026-03-04-rpc-client-redis-inspired-design.md  2026-03-04-rpc-client-redis-inspired-implementation.md  2026-04-16-galay-rpc-catchup-design.md  2026-04-16-galay-rpc-catchup.md
example/: CMakeLists.txt  E1-EchoServer.cpp  E2-EchoClient.cpp  E4-StreamClient.cpp
example/import/: E1-EchoServer.cpp  E2-EchoClient.cpp  E3-StreamServer.cpp  E4-StreamClient.cpp
example/include/: E1-EchoServer.cpp  E3-StreamServer.cpp  E4-StreamClient.cpp
examples/: CMakeLists.txt
examples/import/: E1-EchoServer.cc  E2-EchoClient.cc  E3-StreamServer.cc  E3-stream_server.cc  E4-StreamClient.cc  e1_echo.cc  e2_echo.cc  e3_stream.cc  e4_stream.cc
examples/include/: E1-EchoServer.cc  E2-EchoClient.cc  E3-StreamServer.cc  E3-stream_server.cc  E4-StreamClient.cc  e1_echo.cc  e2_echo.cc  e3_stream.cc  e4_stream.cc
galay-rpc/common/: rpc_log.h
galay-rpc/kernel/: RpcAwaitableBase.h  RpcClient.h  RpcConn.h  RpcServer.h  RpcService.h  RpcStream.h  RpcStreamServer.h  ServiceDiscovery.h  rpc_await.h  rpc_client.h  rpc_conn.h  rpc_discovery.h  rpc_server.h  rpc_service.h  rpc_stream.h  streamsvc.h
galay-rpc/module/: galay.rpc.cppm  galay_rpc.cppm  module_prelude.hpp
galay-rpc/protoc/: RpcBase.h  RpcCodec.h  RpcError.h  RpcMessage.h  rpc_base.h  rpc_codec.h  rpc_error.h  rpc_message.h
galay-rpc/utils/: runtime_compat.h
scripts/: S1-build.sh  S2-run_tests.sh  S3-Bench-Rust-Compare.sh
scripts/tests/: test_cmake_packaging.sh
test/: CMakeLists.txt  T1-RpcProtocolTest.cpp  T1-rpc_protocol_test.cpp  T2-RpcServerTest.cpp  T3-RpcClientTest.cpp  T3-rpc_client_test.cpp  result_writer.h  t1_proto.cpp  t2_server.cpp  t3_client.cpp  t4_await.cpp  t5_compat.cpp  t6_rpc_log.cpp
todo/: rpc-implementation.md
